--- a/JAMes/usermanagement/templates/usermanagement/personal_upload.html
+++ b/JAMes/usermanagement/templates/usermanagement/personal_upload.html
@@ -39,7 +39,7 @@
                     </div>  <!-- Schließt den Div-Container für die Warnmeldung. -->
                     <p class="text-muted">Insolvenz = 0 --> keine Insolvenz</p>  <!-- Erklärung für den Wert "Insolvenz = 0". -->
                     <p class="text-muted">Insolvenz = 1 --> Insolvenz</p>  <!-- Erklärung für den Wert "Insolvenz = 1". -->
-                    <button id="data_field_info_button" class="btn btn-sm btn-outline-info btn-block">Info</button>  <!-- Info-Button mit der ID "data_field_info_button". -->
+                    <button id="data_field_info_button" type="button" class="btn btn-sm btn-outline-info btn-block">Info</button> <!-- Info-Button mit der ID "data_field_info_button". -->
                 </div>  <!-- Schließt den Div-Container für die erste Formulargruppe. -->
                 
                 <div class="form-group col-md-6">  <!-- Beginnt einen weiteren Div-Container für eine Formulargruppe und legt ihre Breite auf 6 Spalten fest. -->
