--- a/JAMes/group_preprocessing/templates/segmentation.html
+++ b/JAMes/group_preprocessing/templates/segmentation.html
@@ -60,6 +60,20 @@
 </tbody>
 </table>  <!-- Ende der Tabelle -->
 
+<div class="container">
+  <div class="row">
+      <div class="col-md-6">
+          {{ describe_html|safe }}  <!-- Zeigt die Beschreibung der Tabelle an -->
+      </div>
+      <div class="col-md-6">
+          {{ insolvency_distribution_html|safe }}  <!-- Zeigt die Verteilung der Insolvenzen an -->
+      </div>
+  </div>
+</div>
+
+<br> 
+<br>
+
 <!-- Navigationsbuttons -->
 <div class="d-flex justify-content-between">
   <!-- Button zum Zurückkehren zur vorherigen Seite -->
