--- a/JAMes/usermanagement/templates/usermanagement/personal_dashboard.html
+++ b/JAMes/usermanagement/templates/usermanagement/personal_dashboard.html
@@ -48,7 +48,7 @@
                 <th>User</th>  <!-- Tabellenkopf für User. -->
                 <th>Uploaded at</th>  <!-- Tabellenkopf für Upload-Zeit. -->
                 <th>File</th>  <!-- Tabellenkopf für Datei. -->
-                <th>Delete</th>  <!-- Tabellenkopf für Löschen. -->
+                <!-- <th>Delete</th>   Tabellenkopf für Löschen. -->
             </tr>  <!-- Beendet die Tabellenzeile. -->
         </thead>  <!-- Beendet den Tabellenkopf. -->
 
@@ -59,33 +59,13 @@
                 <td>{{model.user}}</td>  <!-- Zeigt den Benutzer für das aktuelle Modell an. -->
                 <td>{{model.uploaded_at}}</td>  <!-- Zeigt das Upload-Datum für das aktuelle Modell an. -->
                 <td><a href="{% url 'xgexplain'%}?file={{model.file_name}}&current_user={{model.user}}&number_of_groups={{model.number_of_groups}}&ai_method={{model.ai_method}}" class="btn btn-outline-primary">{{model.model_file}}</a></td>  <!-- Erstellt einen Link, der zur Seite "xgexplain" führt und übergibt Parameter wie den Dateinamen, den aktuellen Benutzer, die Anzahl der Gruppen und die KI-Methode. -->
-                <td><a href="{% url 'usermanagement:delete_model' model.id %}" class="btn btn-danger">Delete</a></td> <!-- Erstellt einen Link, der zur Seite "delete_model" führt und übergibt die ID des aktuellen Modells. -->
             </tr>  <!-- Beendet die Tabellenzeile. -->
     {% endfor %}  <!-- Beendet die For-Schleife. -->
         </tbody>  <!-- Beendet den Tabellenkörper. -->
     </table>  <!-- Beendet die Tabelle. -->
 </div>  <!-- Beendet den Div-Container. -->
 <br>  <br />  <!-- Zwei Zeilenumbrüche für Abstand. -->
-<!-- Clear All Button -->
-<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#clearAllModal">Clear All</button>
 
-<!-- Warning Modal -->
-<div class="modal fade" id="clearAllModal" tabindex="-1" role="dialog" aria-labelledby="clearAllModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="clearAllModalLabel">Warning</h5>
-      </div>
-      <div class="modal-body">
-        Are you sure you want to delete all files?
-      </div>
-      <div class="modal-footer">
-        <!-- Button to Open the Modal -->
-        <a href="{% url 'usermanagement:clear_all' %}" class="btn btn-danger">Clear All</a>
-      </div>
-    </div>
-  </div>
-</div>
 {% endblock %}  <!-- Beendet den "content" Block, der im Navbar-Template begonnen hat. -->
 
 
